add -XX:+PrintGCApplicationStoppedTime to startup.sh